# video_app

./: pyproject.toml
conference_server/conference_server/conference_server/: settings.py
conference_server/conference_server/meeting_call/: admin.py  consumers.py  forms.py  models.py  urls.py  views.py
conference_server/conference_server/meeting_call/static/js/: server_offer.js
conference_server/conference_server/meeting_call/templates/: index.html  meeting.html
sdp_server/: .gitignore  pyproject.toml  server.py
