[tool.poetry]
name = "video-app"
version = "0.1.0"
description = ""
authors = ["donil <donil@DESKTOP-EV66SOA.(none)>"]
readme = "README.md"
packages = [{include = "video_app"}]

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
